--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         run: yarn build
       # Note: we only want to deploy when pushing directly to master
       - name: Deploy
-        if: ${{ github.event_name == "push" && github.ref == "refs/heads/master" }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         run: firebase deploy --token "${{ secrets.FIREBASE_TOKEN }}"
