--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tutorials"]
 	path = docs/tutorials
-	url = git@github.com:hotg-ai/tutorials.git
+	url = https://github.com/hotg-ai/tutorials
